add new api and develope export NPI in progress/archived
